chore: fix spacing, change prismic api structure

--- a/src/scss/blocks/_site-head.scss
+++ b/src/scss/blocks/_site-head.scss
@@ -1,6 +1,4 @@
 .site-head {
-  padding: get-size('700') 0;
-
   &__inner {
     display: flex;
     align-items: flex-end;
