--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -54,6 +54,8 @@ body {
   color: get-color('dark-shade');
   line-height: 1.5;
   font-size: get-size('500');
+  padding: var(--space-l) 0;
+  padding-block: var(--space-l);
 
   @include apply-utility('font', 'base');
 }
@@ -113,6 +115,12 @@ dl {
   padding: 0;
 }
 
+[role='contentinfo'] {
+  margin-top: var(--space-xl-2xl);
+  margin-block-start: var(--space-xl-2xl);
+  font-size: var(--step--2);
+}
+
 .steps {
   --flow-space: var(--space-l);
 }
@@ -144,4 +152,11 @@ dl {
   gap: var(--gutter, var(--space-s));
   justify-content: var(--cluster-horizontal-alignment, flex-start);
   align-items: var(--cluster-vertical-alignment, center);
+}
+
+.main {
+  &__info {
+    margin-top: get-size('900');
+    margin-block-start: get-size('900');
+  }
 }
